--- a/index.html
+++ b/index.html
@@ -17,17 +17,23 @@
   <body>
 
     <!-- Page Content -->
-<div class="container">
-    <div class="card border-0 shadow my-5">
-      <div class="card-body p-5">
-        <h1 class="font-weight-light">Fixed Full Page Background Image</h1>
-        <p class="lead">In this snippet, the background image is fixed to the body element. Content on the page will scroll, but the image will remain in a fixed position!</p>
-        <p class="lead">Scroll down...</p>
-        <div style="height: 700px"></div>
-        <p class="lead mb-0">You've reached the end!</p>
+<div class="intro">
+    <div class="container">
+        <div class="shadow my-5">
+          <div class="p-5">
+            <h1 class="">Hello, I'm Doaa Abdelhadi</h1>
+            <p class=""> 
+                I am a data analyst with experience in data solutions.I have experience for one and a half years in programming. I am a
+                computer science student at UOPeople “part-time” I have a background in economics too.One of the goals of UOPeople it is increasing critical thinking for its students and qualifying to self-studying, ability to the reading, reviewing and writing papers research. These are extremely important skills which UOPeople helped me to improve them and at the same time, it are important skills for a researcher for able to get Information, analyze it and present your outcomes such as paper research. 
+                On another hand, as a data scientist | analyst that give me a chance to use Statistical Analysis by R or python and Machine Learning that are  keys in all research fields in the future.Data is a key for any research topic so, I have developed my skills  in web scraping. I'm extremely interested in NLP and Computational Social Science research.                
+            </p>
+            <div style="height: 700px"></div>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
+    
+
+</div>    
 
 
         <script src="js/jquery-3.5.1.js"></script>
