--- a/index.html
+++ b/index.html
@@ -22,11 +22,20 @@
         <div class="shadow my-5">
           <div class="p-5">
             <h1 class="">Hello, I'm Doaa Abdelhadi</h1>
-            <p class=""> 
-                I am a data analyst with experience in data solutions.I have experience for one and a half years in programming. I am a
-                computer science student at UOPeople “part-time” I have a background in economics too.One of the goals of UOPeople it is increasing critical thinking for its students and qualifying to self-studying, ability to the reading, reviewing and writing papers research. These are extremely important skills which UOPeople helped me to improve them and at the same time, it are important skills for a researcher for able to get Information, analyze it and present your outcomes such as paper research. 
+            <p class="p-2"> 
+                I am a data analyst with experience in data solutions.I have experience for one and a half years in programming.I am a
+                computer science student at UOPeople, I have a background in economics too.One of the goals of UOPeople it is increasing critical thinking for its students and qualifying to self-studying, ability to the reading, reviewing and writing papers research. These are extremely important skills which UOPeople helped me to improve them and at the same time, it are important skills for a researcher for able to get Information, analyze it and present your outcomes such as paper research. 
                 On another hand, as a data scientist | analyst that give me a chance to use Statistical Analysis by R or python and Machine Learning that are  keys in all research fields in the future.Data is a key for any research topic so, I have developed my skills  in web scraping. I'm extremely interested in NLP and Computational Social Science research.                
             </p>
+            <div class="icons-social">
+                <a target="_blank" href="https://github.com/doaaabdelhadi"><i class="fab fa-github"></i></a>
+                <a target="_blank" href="https://doaaabdelhadi.blogspot.com/"><i class='fab fa-blogger-b'></i></a>
+                <a target="_blank" href="https://uopeople-my.sharepoint.com/personal/doaaabdelhady_my_uopeople_edu/Documents/Data%20sciecne.pdf"><i class='fa fa-file-pdf'></i></a>
+                <!-- <a target="_blank" href="https://www.linkedin.com/in/harun-ur-rashid6647/"><i class="fab fa-linkedin"></i></a> -->
+                <!-- <a target="_blank" href="https://medium.com/@harunshimanto"><i class="fab fa-medium"></i></a>
+                <a target="_blank" href="https://twitter.com/Shimanto47"><i class="fab fa-twitter"></i></a> -->
+                <!-- <a target="_blank" href="https://www.kaggle.com/harunshimanto"><i class="fab fa-kaggle"></i></a> -->
+        </div>
             <div style="height: 700px"></div>
           </div>
         </div>
