--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="icons-social mt-3">
                 <a target="_blank" href="https://github.com/doaaabdelhadi"><i class="fab fa-github"></i></a>
                 <a target="_blank" href="https://doaaabdelhadi.blogspot.com/"><i class='fab fa-blogger-b'></i></a>
-                <!-- <a target="_blank" href="https://uopeople-my.sharepoint.com/personal/doaaabdelhady_my_uopeople_edu/Documents/Doaa%20Abdelhadi-Resume.pdf"><i class="fa fa-user" aria-hidden="true"></i> -->
+                <a target="_blank" href="https://uopeople-my.sharepoint.com/personal/doaaabdelhady_my_uopeople_edu/Documents/Doaa%20Abdelhadi-Resume.pdf"><i class="fa fa-user" aria-hidden="true"></i>
                 </a>
 
 
