--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="icons-social mt-3">
                 <a target="_blank" href="https://github.com/doaaabdelhadi"><i class="fab fa-github"></i></a>
                 <a target="_blank" href="https://doaaabdelhadi.blogspot.com/"><i class='fab fa-blogger-b'></i></a>
-                <a target="_blank" href="https://uopeople-my.sharepoint.com/personal/doaaabdelhady_my_uopeople_edu/Documents/Doaa%20Abdelhadi-Resume.pdf"><i class="fa fa-user" aria-hidden="true"></i>
+                <a target="_blank" href="https://uopeople-my.sharepoint.com/personal/doaaabdelhady_my_uopeople_edu/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fdoaaabdelhady%5Fmy%5Fuopeople%5Fedu%2FDocuments%2FDoaa%20Abdelhadi%2DResume%2Epdf&parent=%2Fpersonal%2Fdoaaabdelhady%5Fmy%5Fuopeople%5Fedu%2FDocuments&originalPath=aHR0cHM6Ly91b3Blb3BsZS1teS5zaGFyZXBvaW50LmNvbS86YjovZy9wZXJzb25hbC9kb2FhYWJkZWxoYWR5X215X3VvcGVvcGxlX2VkdS9FZDZiMnBZcDB2bERtTkhXTVc3NnNJRUJLRkJPV1FyNjVYd1JCZ3NfZklrbXh3P3J0aW1lPW05eXJmOHduMkVn"><i class="fa fa-user" aria-hidden="true"></i>
                 </a>
 
 
