--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="icons-social mt-3">
                 <a target="_blank" href="https://github.com/doaaabdelhadi"><i class="fab fa-github"></i></a>
                 <a target="_blank" href="https://doaaabdelhadi.blogspot.com/"><i class='fab fa-blogger-b'></i></a>
-                <a target="_blank" href="https://uopeople-my.sharepoint.com/:b:/g/personal/doaaabdelhady_my_uopeople_edu/Ed6b2pYp0vlDmNHWMW76sIEBKFBOWQr65XwRBgs_fIkmxw?e=JEByHq"><i class="fa fa-user" aria-hidden="true"></i>
+                <!-- <a target="_blank" href="https://uopeople-my.sharepoint.com/:b:/g/personal/doaaabdelhady_my_uopeople_edu/Ed6b2pYp0vlDmNHWMW76sIEBKFBOWQr65XwRBgs_fIkmxw?e=JEByHq"><i class="fa fa-user" aria-hidden="true"></i> -->
                 </a>
 
 
